# covg_fpga

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  Registers.xlsx  pyproject.toml  setup.cfg
Matlab/DSPfilterFunctions/: 4thOrderButter.fda  Butter.fda  (+24 more)
SPI_Master/: SPI_Master.xise  WbSignal_converter.v  adc_daq_v1.ucf  fuse.xmsgs  fuseRelaunch.cmd  hbexec.v  okLibrary.v  okPipeIn.tfi  one_second_pulse.v  read_AD796x_fifo_cmd.v  spi_shift.v  spi_top.v  tb_spi_top.v  tb_spi_top_beh.prj  tb_spi_top_isim_beh.wdb  top_level_module.bit  top_level_module.ngc  top_level_module.prj  top_level_module.v  top_level_module_pad.txt  top_level_module_usage.xml  top_module.v  webtalk_pn.xml
SPI_modules/: spi_shift.v  spi_top.v
Verilog/: .top.v.swp  adc_daq_v1.ucf  top.v
clk_wiz_0/: clk_wiz_0.v  clk_wiz_0.xci  clk_wiz_0_clk_wiz.v
docs/: README.md
examples/: ep_defines_example.v  ep_defines_sheet_example.xlsx  ep_defines_sheet_template.xlsx  impedance_analyzer.py  register_index_guide_completed_example.xlsx  register_index_template.xlsx
fpga_XEM7310/: fpga_XEM7310.xpr  vivado.jou  vivado_10744.backup.jou  vivado_1236.backup.jou  vivado_13172.backup.jou  vivado_1772.backup.jou  vivado_3700.backup.jou  vivado_4448.backup.jou  vivado_7084.backup.jou  vivado_8656.backup.jou  vivado_pid5940.str
managed_ip_project/: managed_ip_project.xpr
python/: Registers.xlsx  Speedtest.bit  UIscript.py  boards.py  fpga.py  fpga_test.bit  i2c.bit  i2c_test.bit  interfaces.py  observer.py  ok.py  requirements.txt  spi_test.bit
testbench/: tb_spi_top.v
wishboneMaster/: Wishbone_Master.v
(+1393 files in other folders)
