[metadata]
name = register-map
version = 0.0.7
author = Abe Stroschein
author_email = ajstroschein@stthomas.edu
description = Register and Opal Kelly Endpoint Map
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lucask07/covg_fpga
project_urls =
    Bug Tracker = https://github.com/lucask07/covg_fpga/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent

[options]
package_dir =
    = python/src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = python/src
